--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,7 @@ COPY ./views/ /usr/share/nginx/html/
 COPY ./css/ /usr/share/nginx/html/css/
 COPY ./js/ /usr/share/nginx/html/js/
 COPY ./images/ /usr/share/nginx/html/images/
+COPY ./assets/ /usr/share/nginx/html/assets/
 
 EXPOSE 80
 
